--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "退伍不褪色,转业不转志",
+    "navigationBarTitleText": "退役军人信息采集系统",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
