--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/info/index",
-    "pages/collect/index"
+    "pages/collect/index",
+    "pages/collect/IDCard/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
