--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 		"newFeature": true
 	},
 	"appid": "wxb916d10579ea0855",
-	"projectname": "Soldier",
+	"projectname": "Soldier-Git",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -49,6 +49,13 @@
 					"id": -1,
 					"name": "信息录入",
 					"pathName": "pages/collect/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "身份证录入",
+					"pathName": "pages/collect/IDCard/index",
 					"scene": null
 				}
 			]
