--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/info/index",
     "pages/collect/index",
-    "pages/collect/IDCard/index"
+    "pages/collect/IDCard/index",
+    "pages/collect/extend/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
