--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/info/index",
     "pages/collect/index",
     "pages/collect/IDCard/index",
-    "pages/collect/extend/index"
+    "pages/collect/extend/index",
+    "pages/introduction/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
