--- a/project.config.json
+++ b/project.config.json
@@ -19,7 +19,7 @@
 		}
 	},
 	"appid": "wxb916d10579ea0855",
-	"projectname": "Soldier-Git",
+	"projectname": "Soldier-Git2.0",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
