--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "退役军人信息采集系统",
+    "navigationBarTitleText": "退役军人就业推荐系统",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
